force-app/main/default/objects/NewAgreement__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <formula>Employee__r.Phone__c</formula>
    <label>Phone Number</label>
    <type>Text</type>
</CustomField>