force-app/main/default/objects/NewAgreement__c/validationRules/Pay_rate_can_not_be_less_than_15.validationRule-meta.xml
<ValidationRule>
    <fullName>Pay_rate_can_not_be_less_than_15</fullName>
    <active>true</active>
    <errorConditionFormula>Pay_Rate__c  &lt; 15</errorConditionFormula>
    <errorDisplayField>Pay_Rate__c</errorDisplayField>
    <errorMessage>Pay rate should be higher than 15</errorMessage>
</ValidationRule>